--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,3 +8,11 @@ jobs:
     - id: checkout-code
       name: Checkout code
       uses: actions/checkout@v2
+    - id: install-katacoda-cli
+      name: Install Katacoda CLI
+      run: |
+        sudo npm i katacoda-cli --global
+    - id: validate
+      name: Validate Katacoda scenarios
+      run: |
+        katacoda validate:all --repo ${{ github.workspace }}
