--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,12 +12,12 @@ jobs:
       name: Install Katacoda CLI
       run: |
         sudo npm i katacoda-cli --global
-#    - id: validate
-#      name: Validate Katacoda scenarios
-#      run: |
-#        katacoda validate:all --repo ${{ github.workspace }}
-#    - id: validate-markdown
-#      name: Validate Katacoda Markdown
-#      run: |
-#        sudo gem install mdl
-#        mdl ${{ github.workspace }}
+    - id: validate
+      name: Validate Katacoda scenarios
+      run: |
+        katacoda validate:all --repo ${{ github.workspace }}
+    - id: validate-markdown
+      name: Validate Katacoda Markdown
+      run: |
+        sudo gem install mdl
+        mdl ${{ github.workspace }}
