--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,8 +16,8 @@ jobs:
       name: Validate Katacoda scenarios
       run: |
         katacoda validate:all --repo ${{ github.workspace }}
-    - id: validate-markdown
-      name: Validate Katacoda Markdown
-      run: |
-        sudo gem install mdl
-        mdl ${{ github.workspace }}
+#    - id: validate-markdown
+#      name: Validate Katacoda Markdown
+#      run: |
+#        sudo gem install mdl
+#        mdl ${{ github.workspace }}
