--- a/kubernetes-cka-part4b/assets/nginx-deployment.yaml
+++ b/kubernetes-cka-part4b/assets/nginx-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: nginxx
+  namespace: alpha
   labels:
     app: app 
     name: nginx-name
