--- a/kubernetes-cka-part4b/assets/exceeding-pod.yaml
+++ b/kubernetes-cka-part4b/assets/exceeding-pod.yaml
@@ -17,5 +17,9 @@ spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
+       resources:
+       limits:
+         memory: 2Gi
        ports:
        - containerPort: 80
+
