--- a/kubernetes-cka-part4b/assets/exceeding-pod.yaml
+++ b/kubernetes-cka-part4b/assets/exceeding-pod.yaml
@@ -4,6 +4,7 @@ metadata:
  name: nginx-deployment
  labels:
    app: nginx
+   namespace: gamma
 spec:
  replicas: 1
  selector:
@@ -18,8 +19,8 @@ spec:
      - name: nginx
        image: nginx:1.7.9
        resources:
-       limits:
-         memory: 2Gi
+         limits:
+           memory: 2Gi
        ports:
        - containerPort: 80
 
